@@ -9,8 +9,8 @@
 </p>
 
 <p>
-  <b>Files:</b>
-  <pre><%= @downloader.files %></pre>
+  <b>Files Digest:</b>
+  <pre><%= @downloader.files_digest %></pre>
 </p>
 
 <p>
