@@ -20,8 +20,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :files %><br />
-    <%= f.text_area :files %>
+    <%= f.label :file_path %><br />
+    <%= f.text_area :file_path %>
   </div>
   <div class="actions">
     <%= f.submit %>
