@@ -9,8 +9,8 @@
 </p>
 
 <p>
-  <b>Files:</b>
-  <%= @segment.files %>
+  <b>File Path:</b>
+  <%= @segment.file_path %>
 </p>
 
 <%= link_to 'Edit', edit_segment_path(@segment) %> |
