@@ -1,0 +1,5 @@
+class AddExternalUserIdToDownloaders < ActiveRecord::Migration
+  def change
+    add_column :downloaders, :external_user_id, :integer
+  end
+end
