@@ -9,6 +9,9 @@ class DownloadersControllerTest < ActionController::TestCase
   test "should download file" do
     get :download_file, id: downloaders(:two).to_param, download_token: 'abc2', file_path: 'test_file.txt'
     assert_not_nil assigns(:downloader)
+    assert_not_nil assigns(:segment)
+    assert_not_nil assigns(:downloader_segment)
+    assert_equal 1, assigns(:downloader_segment).download_count
     assert_equal 'attachment; filename="test_file.txt"', @response.header['Content-Disposition']
     assert_response :success
   end
@@ -16,31 +19,49 @@ class DownloadersControllerTest < ActionController::TestCase
   test "should not download file and retrieve file checksum for missing segment" do
     get :download_file, id: downloaders(:three).to_param, download_token: 'abcmissing', file_path: 'missing.txt', checksum: '1'
     assert_not_nil assigns(:downloader)
+    assert_nil assigns(:segment)
+    assert_nil assigns(:downloader_segment)
     assert_equal 'abcmissing', assigns(:downloader).download_token
-    assert_equal "NOTHING", @response.body
-    assert_response :success
+    assert_equal "No longer authorized to download this file", @response.body
+    assert_response 404
   end
 
   test "should download file and retrieve file checksum" do
     get :download_file, id: downloaders(:two).to_param, download_token: 'abc2', file_path: 'test_file.txt', checksum: '1'
     assert_not_nil assigns(:downloader)
+    assert_not_nil assigns(:segment)
+    assert_not_nil assigns(:downloader_segment)
+    assert_equal 1, assigns(:downloader_segment).checksum_count
     assert_equal 'abc2', assigns(:downloader).download_token
     assert_equal "a748f32489958e3c31f3ea568dfc0201", @response.body
     assert_response :success
   end
 
-  test "should not download file that does not exist" do
-    get :download_file, id: @downloader.to_param, download_token: 'abc', file_path: 'MyText'
+  test "should download file and retrieve file freshly generated checksum" do
+    get :download_file, id: downloaders(:with_executable).to_param, download_token: 'fake', file_path: 'checksum.txt', checksum: '1'
     assert_not_nil assigns(:downloader)
+    assert_not_nil assigns(:segment)
+    assert_not_nil assigns(:downloader_segment)
+    assert_equal 1, assigns(:downloader_segment).checksum_count
+    assert_equal 'fake', assigns(:downloader).download_token
+    assert_equal "d41d8cd98f00b204e9800998ecf8427e", @response.body
+    assert_response :success
+  end
+
+  test "should not download file that does not exist" do
+    get :download_file, id: @downloader.to_param, download_token: 'abc', file_path: 'file_deleted.txt'
+    assert_not_nil assigns(:downloader)
+    assert_not_nil assigns(:segment)
+    assert_not_nil assigns(:downloader_segment)
     assert_equal 'abc', assigns(:downloader).download_token
-    assert_equal 'MyText', assigns(:downloader).files
+    assert_equal Digest::SHA1.hexdigest(''), assigns(:downloader).files_digest
     assert_equal "The file is no longer available", @response.body
     assert_equal 404, @response.status
   end
 
   test "should not download file that has an expired token" do
-    get :download_file, id: @downloader.to_param, download_token: 'expired_token', file_path: 'MyText'
-    assert_not_nil assigns(:downloader)
+    get :download_file, id: @downloader.to_param, download_token: 'expired_token', file_path: 'file_deleted.txt'
+    assert_nil assigns(:downloader)
     assert_equal "No longer authorized to download this file", @response.body
     assert_equal 404, @response.status
   end
@@ -62,6 +83,9 @@ class DownloadersControllerTest < ActionController::TestCase
                     target_file_name: 'downloader3'
     end
     assert_not_nil assigns(:downloader)
+    
+    assert_equal 0, assigns(:downloader).downloader_segments.size
+    assert_equal 0, assigns(:downloader).segments.size
 
     assert_redirected_to downloader_path(assigns(:downloader))
   end
@@ -71,8 +95,11 @@ class DownloadersControllerTest < ActionController::TestCase
       post :create, downloader: { files: "checksum.txt\nmissing.txt\ntest_file.txt", name: 'Download_3_Files', folder: 'test' }, target_file_name: 'downloader3', format: 'xml'
     end
     assert_not_nil assigns(:downloader)
+    
+    assert_equal 3, assigns(:downloader).downloader_segments.size
+    assert_equal 3, assigns(:downloader).segments.size
 
-    assert_equal "checksum.txt\nmissing.txt\ntest_file.txt", @response.body.scan(/<files>(.*?)<\/files>/m).flatten.first
+    assert_equal assigns(:downloader).files_digest, @response.body.scan(/<files-digest>(.*?)<\/files-digest>/m).flatten.first
     assert_equal "3", @response.body.scan(/<file-count .*?>(.*?)<\/file-count>/m).flatten.first
     assert_equal users(:admin).to_param, @response.body.scan(/<user-id .*?>(.*?)<\/user-id>/m).flatten.first
     assert_equal assigns(:downloader).download_token, @response.body.scan(/<download-token>(.*?)<\/download-token>/m).flatten.first
@@ -87,6 +114,8 @@ class DownloadersControllerTest < ActionController::TestCase
     end
 
     assert_not_nil assigns(:downloader)
+    assert_equal 1, assigns(:downloader).downloader_segments.size
+    assert_equal 1, assigns(:downloader).segments.size
 
     assert_redirected_to downloader_path(assigns(:downloader))
   end
@@ -113,7 +142,7 @@ class DownloadersControllerTest < ActionController::TestCase
   end
 
   test "should update downloader" do
-    put :update, id: @downloader.to_param, downloader: @downloader.attributes
+    put :update, id: @downloader.to_param, downloader: { name: 'Updated Name', files: 'file_deleted.txt', folder: 'folder_one' }
     assert_redirected_to downloader_path(assigns(:downloader))
   end
 
