@@ -3,8 +3,8 @@ require 'test_helper'
 class SegmentTest < ActiveSupport::TestCase
   
   test "should generate checksum" do
-    segments(:generate_checksum).generate_checksum!
-    assert_equal "d41d8cd98f00b204e9800998ecf8427e", segments(:generate_checksum).checksum
+    segments(:checksum).generate_checksum!
+    assert_equal "d41d8cd98f00b204e9800998ecf8427e", segments(:checksum).checksum
   end
   
   test "should not generate checksum for nonexistent file" do
